crates/toml_edit/tests/snapshots/invalid/array/no-comma-01.stderr
TOML parse error at line 1, column 15
  |
1 | no-comma-1 = [true false]
  |               ^^^^^^^^^^
string values must be quoted, expected literal string
